--- a/sabah_lichens.Rmd
+++ b/sabah_lichens.Rmd
@@ -7,3 +7,7 @@ output:
     fig_caption: yes
     fig_crop: yes
 ---
+
+```{r setup, include = FALSE}
+source('./scripts/00_setup.R')  # run setup script
+```
