--- a/sabah_lichens.Rmd
+++ b/sabah_lichens.Rmd
@@ -25,9 +25,13 @@ Sampling was conducted at three sites within different areas of lowland forest i
 
 At each site, ...
 
+The following functional traits were recorded for each tree: (1) girth, measured as ...; (2) bark type (S = smooth, C = scaly, R = ridged/rough, DR = dry ancient); and (3) the presence of buttresses or flutes.
+
 ## Data analysis
 
 Taxonomic/functional group richness (_S_) and Shannon-Wiener diversity (H') were calculated for each tree.
+
+Tree bark type was coded numerically in relation to increasing roughness, i.e. smooth = 0, scaly = 1, ridged/rough = 2, ancient dry = 3.
 
 Community dissimilarities were calculated using the zero-adjusted Bray-Curtis coefficient (Clarke _et al._, 2006, _J. Exp. Mar. Biol. Ecol._ 330:55--80).
 
@@ -37,4 +41,6 @@ Community dissimilarities were calculated using the zero-adjusted Bray-Curtis co
 
 1. The _crsco_ taxfree code is duplicated in the lichen functional group abundance dataset -- should the abundance variables be summed for these two rows?
 
-1. There are no data for tree _SA4_ in the lichen functional group abundance dataset (in addition to _D710_ -- see above).
+1. There are no data for tree _SA4_ in the lichen functional group abundance dataset (in addition to tree _D710_ -- see above).
+
+1. Can 'bark type' be coded numerically (i.e. an ordinal categorical variable), e.g. smooth = 1, scaly = 2, ridged/rough = 3, dry ancient = 4? In this way, it could be used as an environmental variable in the CAP analysis.
