correct YAML header in master .Rmd file

--- a/sabah_lichens.Rmd
+++ b/sabah_lichens.Rmd
@@ -1,9 +1,9 @@
 ---
 title: 'How much taxonomic expertise is necessary for prioritising areas of lowland rainforest sites as habitats for lichens in northeast-Borneo?'
-author: "Rob Mrowicki"
+author: 'Rob Mrowicki'
 date: '`r format(Sys.time(), "%d %B %Y")`'
 output:
-  pdf_document
+  pdf_document:
     fig_caption: yes
     fig_crop: yes
 ---
